infra/k8s/ingress-dev.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: micro-sys-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: user
                port:
                  number: 3000
          - path: /api/roles/?(.*)
            pathType: Prefix
            backend:
              service:
                name: role
                port:
                  number: 3000
